--- a/[framework]/framework-menu/html/index.html
+++ b/[framework]/framework-menu/html/index.html
@@ -3,16 +3,18 @@
         <link rel="stylesheet" href="reset.css" type="text/css">
         <link rel="stylesheet" href="index.css" type="text/css">
         <script src="https://cfx-nui-game/ui/jquery.js" type="text/javascript"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+        <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
     </head>
     <body>
         <div id="container">
             <form id="form">
-                <input placeholder="Model id..." id="modelInput">
+                <input placeholder="Model id..." id="modelInput"></input>
+                <br>
                 <button id="submit" type="submit">Change</button>
                 <button id="close">Exit</button>
             </form>
-            <script src="index.js" type="text/javascript"></script>
         </div>
+        <script src="./index.js" type="text/javascript"></script>
     </body>
 </html>
